test/error/1/AddOne.java
public class AddOne {

  // Errors because tests expect integer result
  public boolean main(int a) {
    return a > 1;
  }

}
